update jwt, refresh