@@ -3,50 +3,33 @@ package com.DW2.InnovaMedic.util;
 import io.jsonwebtoken.Jwts;
 import io.jsonwebtoken.security.Keys;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 
-import java.util.Collections;
-import java.util.Date;
-import java.util.HashMap;
-import java.util.Map;
+import java.util.*;
 
 public class Token {
     private final static String TOKEN_SECRETO = "QhwOQohWEdy6hrtEVpCR8IMJFgkSl57g";
     private final static Long ACCESS_TOKEN_DURACION = 15 * 60L;
     private final static Long REFRESH_TOKEN_DURACION = 86400L;
 
-    public static String crearAccessToken(String user, String email) {
-        return crearToken(user, email, ACCESS_TOKEN_DURACION);
+    public static String crearAccessToken(String user, String email, String rol) {
+        return crearToken(user, email, ACCESS_TOKEN_DURACION, rol);
     }
 
-    public static String crearRefreshToken(String user, String email) {
-        return crearToken(user, email, REFRESH_TOKEN_DURACION);
+    public static String crearRefreshToken(String user, String email, String rol) {
+        return crearToken(user, email, REFRESH_TOKEN_DURACION, rol);
     }
 
-    public static String crearToken(String user, String email, long duracion) {
+    public static String crearToken(String user, String email, long duracion, String rol) {
         Date expiracionFecha = new Date(System.currentTimeMillis() + duracion * 1000L);
-
-        Map<String, Object> map = new HashMap<>();
-        map.put("nombre", user);
 
         return Jwts.builder()
                 .setSubject(email)
+                .claim("nombre", user)
+                .claim("rol", rol)
                 .setExpiration(expiracionFecha)
-                .addClaims(map)
                 .signWith(Keys.hmacShaKeyFor(TOKEN_SECRETO.getBytes()))
                 .compact();
-    }
-
-    public static String getEmailDesdeToken(String token) {
-        try {
-            return Jwts.parserBuilder()
-                    .setSigningKey(TOKEN_SECRETO.getBytes())
-                    .build()
-                    .parseClaimsJws(token)
-                    .getBody()
-                    .getSubject();
-        } catch (Exception e) {
-            return null;
-        }
     }
 
     public static boolean esValido(String token) {
@@ -62,11 +45,23 @@ public class Token {
     }
 
     public static UsernamePasswordAuthenticationToken getauth(String token) {
-        String email = getEmailDesdeToken(token);
+        try {
+            var claims = Jwts.parserBuilder()
+                    .setSigningKey(TOKEN_SECRETO.getBytes())
+                    .build()
+                    .parseClaimsJws(token)
+                    .getBody();
 
-        return email != null
-                ? new UsernamePasswordAuthenticationToken(email, null, Collections.emptyList())
-                : null;
+            String email = claims.getSubject();
+            String rol = (String) claims.get("rol");
+
+            if (email == null || rol == null) return null;
+
+            List<SimpleGrantedAuthority> authorities = List.of(new SimpleGrantedAuthority("ROLE_" + rol));
+            return new UsernamePasswordAuthenticationToken(email, null, authorities);
+        } catch (Exception e) {
+            return null;
+        }
     }
 
     public static Map<String, String> obtenerDatosDesdeRefreshToken(String token) {
@@ -79,10 +74,12 @@ public class Token {
 
             String email = claims.getSubject();
             String nombre = (String) claims.get("nombre");
+            String rol = (String) claims.get("rol");
 
             Map<String, String> datos = new HashMap<>();
             datos.put("email", email);
             datos.put("nombre", nombre);
+            datos.put("rol", rol);
 
             return datos;
         } catch (Exception e) {
